fix getPid for windows